<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Alarm_Data"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Click_to_Check_Next_Alarm"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLabel"
        android:layout_marginLeft="50dp"/>

    <TextView
        android:id="@+id/textViewPackageNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Package_Name"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLabel"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:id="@+id/textViewPackageNameData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPackageNameLabel"
        android:layout_marginLeft="50dp"/>


    <TextView
        android:id="@+id/textViewTriggerTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Trigger_Time"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPackageNameData"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:id="@+id/textViewTriggerTimeData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTriggerTimeLabel"
        android:layout_marginLeft="50dp"/>


    <TextView
        android:id="@+id/textViewMoreInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Intent_Sender"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTriggerTimeData"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:id="@+id/textViewMoreInfoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewMoreInfoLabel"
        android:layout_marginLeft="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Click_to_Check_Next_Alarm"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLabel"
        android:layout_marginLeft="50dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonLaunchBilling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Launch Billing Activity"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</android.support.constraint.ConstraintLayout>